--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h1><a href="/">Benjamin Chambon</a></h1>
 
           <p class="intro">
-            Software Developer.
+            DevOps
           </p>
           <div class="links">
             <a href="https://ca.linkedin.com/in/benjamin-chambon-35b00a13" title="Check my LinkedIn" class="icon-linkedin-squared"></a>
