Removing CV links (address and number was on it + not up to date)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <hr>
 
-        <h3>Check out my CV in <a href="pdf/cv_eng.pdf">English</a> et en <a href="pdf/cv_fr.pdf">Français.</a></h3>
+        <!--<h3>Check out my CV in <a href="pdf/cv_eng.pdf">English</a> et en <a href="pdf/cv_fr.pdf">Français.</a></h3>-->
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
